--- a/pom.xml
+++ b/pom.xml
@@ -51,14 +51,21 @@
 		    <groupId>org.seleniumhq.selenium</groupId>
 		    <artifactId>selenium-chrome-driver</artifactId>
 		    <version>4.27.0</version>
-		</dependency>		
-		<!--
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.jboss.aerogear</groupId>
+		    <artifactId>aerogear-otp-java</artifactId>
+		    <version>1.0.0</version>
+		</dependency>
+	
+		
 		<dependency>
 		    <groupId>com.microsoft.playwright</groupId>
 		    <artifactId>playwright</artifactId>
 		    <version>1.49.0</version>
 		</dependency>
-		-->
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
